<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="viewmodel"
                  type="com.miguel.android.trackyourexpenses.viewmodel.RegisterViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" >

        <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ProgressBarStyle"
                android:indeterminate="true"
                android:visibility="gone"/>
    </RelativeLayout>

    <EditText
            android:id="@+id/nameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:text="@={viewmodel.editTextName}"
            android:hint="@string/name"
            app:emptyField="@{viewmodel.editTextName}"
            app:error="@{@string/empty_field}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp" android:layout_marginStart="8dp"/>
    <EditText
            android:id="@+id/lastnameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:text="@={viewmodel.editTextLName}"
            android:hint="@string/lastname"
            app:emptyField="@{viewmodel.editTextLName}"
            app:error="@{@string/empty_field}"
            app:layout_constraintEnd_toEndOf="@+id/nameEditText"
            app:layout_constraintStart_toStartOf="@+id/nameEditText"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:text="@={viewmodel.editTextUsername}"
            android:hint="@string/username"
            app:emptyField="@{viewmodel.editTextUsername}"
            app:error="@{@string/empty_field}"
            app:layout_constraintEnd_toEndOf="@+id/lastnameEditText"
            app:layout_constraintStart_toStartOf="@+id/lastnameEditText"
            app:layout_constraintTop_toBottomOf="@+id/lastnameEditText" />

    <EditText
            android:id="@+id/emailEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@={viewmodel.editTextEmail}"
            android:hint="@string/email"
            app:error="@{@string/empty_field}"
            app:emptyField="@{viewmodel.editTextEmail}"
            app:layout_constraintEnd_toEndOf="@+id/usernameEditText"
            app:layout_constraintStart_toStartOf="@+id/usernameEditText"
            app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />

    <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@={viewmodel.editTextPassword}"
            android:hint="@string/password"
            app:emptyField="@{viewmodel.editTextPassword}"
            app:error="@{@string/empty_field}"
            app:layout_constraintEnd_toEndOf="@+id/emailEditText"
            app:layout_constraintStart_toStartOf="@+id/emailEditText"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <Button
            android:id="@+id/registerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
            app:layout_constraintStart_toStartOf="@+id/passwordEditText"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>