<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
            android:hint="@string/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/infoEditText" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:hint="@string/place_who"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/placeEditText" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/infoEditText" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:hint="@string/total"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/totalEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/placeEditText"
            app:layout_constraintBottom_toBottomOf="@+id/placeEditText"
            app:layout_constraintStart_toEndOf="@+id/placeEditText" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0" android:layout_marginStart="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>