<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewmodel"
                  type="com.miguel.android.trackyourexpenses.ui.viewmodel.LoginViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/ShrineTextInputLayout"
                android:hint="@string/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp">

            <EditText
                    android:id="@+id/mUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:text="@={viewmodel.editTextUsername}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/ShrineTextInputLayout"
                android:hint="@string/password"
                app:layout_constraintEnd_toEndOf="@+id/usernameLayout"
                app:layout_constraintStart_toStartOf="@+id/usernameLayout"
                app:layout_constraintTop_toBottomOf="@+id/usernameLayout">

            <EditText
                    android:id="@+id/mPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:text="@={viewmodel.editTextPassword}"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
                android:id="@+id/mLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/login"
                android:onClick="@{() -> viewmodel.onLoginButtonClick()}"
                app:layout_constraintEnd_toEndOf="@+id/passwordLayout"
                app:layout_constraintStart_toStartOf="@+id/passwordLayout"
                app:layout_constraintTop_toBottomOf="@+id/switchLogin" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
                android:id="@+id/mSignUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/create_account"
                app:layout_constraintEnd_toEndOf="@+id/mLogin"
                app:layout_constraintStart_toStartOf="@+id/mLogin"
                app:layout_constraintTop_toBottomOf="@+id/mLogin"/>
        <Switch
                android:text="@string/keep_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switchLogin" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
                app:layout_constraintStart_toStartOf="@+id/passwordLayout" android:layout_marginStart="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>