<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="viewmodel"
                type="com.miguel.android.trackyourexpenses.viewmodel.NewAccountViewModel"/>
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:text="@={viewmodel.editTextAccountName}"
            android:inputType="textPersonName"
            android:hint="@string/account_name"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.02"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:autofillHints=""
            android:layout_marginTop="8dp"/>
    <TextView
            android:id="@+id/colorTextView"
            android:text="@string/color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:textSize="18sp"
            android:textStyle="bold" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <Button
            android:id="@+id/colorPicker"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/shape_circle"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/colorTextView"
            app:layout_constraintVertical_bias="1.0" app:layout_constraintTop_toTopOf="@+id/colorTextView"
            app:layout_constraintStart_toEndOf="@+id/colorTextView" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.02"/>
    <TextView
            android:text="@string/add_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:id="@+id/textView2"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/title" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
            android:layout_width="64dp"
            android:layout_height="44dp" app:srcCompat="@drawable/ic_image_black_24dp"
            android:id="@+id/addImage"
            app:layout_constraintStart_toEndOf="@+id/textView2" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.042" app:layout_constraintTop_toTopOf="@+id/textView2"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"/>
    <Button
            android:id="@+id/save"
            android:text="@string/save_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/colorTextView"
            android:onClick="@{() -> viewmodel.onButtonSaveClick()}"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>